# plasma-applet-uptime-widget

./: CMakeLists.txt  README.md
package/: metadata.json
package/contents/config/: config.qml
package/contents/ui/: CircleText.qml  CompactRepresentation.qml  main.qml
package/contents/ui/config/: ConfigAppearance.qml
